# solar-pv-simulator

./: .gitignore  README.md  app.py  auth.py  pv_simulator.py  pyproject.toml  requirements.txt
.streamlit/: config.toml  secrets.toml
backtesting/: Back_Test_calculations.py  __init__.py  config.py  exploratory_analysis.py  imbalance_cost_entsoe.py  models.py  preprocessing.py  weather_data_fetch.py
components/: dashboard.py  evaluator.py  history.py  imbalance.py  profile_simulator.py  reports.py  settings.py
data/: users.json
